--- a/home/dotfiles/hypr/waybar/colors.css
+++ b/home/dotfiles/hypr/waybar/colors.css
@@ -1,30 +1,12 @@
-@define-color background #1e1e2e;
-@define-color foreground #f0f1f5;
-@define-color lighter #0f1417;
-@define-color white-custom #c2c4c3;
-@define-color gentoo #d17dc6;
-@define-color datet #7d69d1;
-@define-color timet #eda57b;
-@define-color charging #a3c725;
-@define-color discharging #e62315;
-@define-color full #5dbd35;
-@define-color red #e53935;
-@define-color pink #d81b60;
-@define-color purple #9F7DCF;
-@define-color deep-purple #5e35b1;
-@define-color indigo #3949ab;
-@define-color blue #5895DC;
-@define-color light-blue #039be5;
-@define-color cyan #00acc1;
-@define-color teal #00897b;
-@define-color green #43a047;
-@define-color light-green #7cb342;
-@define-color lime #c0ca33;
-@define-color yellow #E0A445;
-@define-color amber #DFA445;
-@define-color orange #F57C00;
-@define-color deep-orange #f4511e;
-@define-color brown #6d4c41;
-@define-color gray #757575;
-@define-color blue-gray #546e7a;
-@define-color nix-color #92d4c9;
+@define-color bg-dark rgba(10, 15, 20, 0.9); /* deep space background */
+@define-color bg-panel rgba(30, 35, 40, 0.3); /* panel background */
+@define-color border rgba(80, 80, 80, 0.1);
+
+@define-color text-primary #DADADA; /* moonlight gray */
+@define-color text-secondary #A0A0A0; 
+@define-color accent-blue #9ab0ff; /* soft moonlit blue */
+@define-color accent-purple #c0a0ff;
+@define-color accent-red #ff7777;
+@define-color accent-yellow #b0c0d0;
+
+@define-color shadow rgba(200, 200, 255, 0.06);
