--- a/home/dotfiles/hypr/waybar/style.css
+++ b/home/dotfiles/hypr/waybar/style.css
@@ -1,237 +1,80 @@
-/*
-* 
-* Different solution so when applied on new screen 
-* values need to change a bit 
-*
-* padding = space within
-* margin = space from element to element
-*/
-
-
 @import "colors.css";
 
 * {
-  border: none;
-  border-radius: 8;
-  font-family: "JetbrainsMono Nerd Font";
-  font-size: 12px;
-  min-height: 15px;
+    border: none;
+    border-radius: 0px;
+    font-family: JetBrainsMono Nerd Font, monospace;
+    font-size: 12px;
+    min-height: 0;
 }
 
 window#waybar {
-  background: transparent;
+    background-color: @bg-dark;
+    color: @text-primary;
+    border-top: 2px solid @border;
 }
 
-window#waybar.hidden {
-  opacity: 0.2;
+#wlr-workspaces button {
+    padding: 0 6px;
+    margin: 2px;
+    background-color: @bg-panel;
+    border: 1px solid @border;
+    border-radius: 4px;
+}
+
+#wlr-workspaces button.focused {
+    background-color: @accent-blue;
+}
+
+#window, #mpd, #playerctl, #weather, #cpu, #memory, #volume, #clock, #tray {
+    padding: 0 10px;
+    margin: 2px 4px;
+    background-color: @bg-panel;
+    border: 1px solid @border;
+    border-radius: 4px;
+    box-shadow: 0 0 5px @shadow;
 }
 
 #window {
-  margin-top: 6px;
-  padding-left: 10px;
-  padding-right: 10px;
-  border-radius: 10px;
-  transition: none;
-  color: transparent;
-  background: transparent;
+    color: @text-primary;
 }
 
-#workspaces {
-  margin-top: 6px;
-  margin-left: 12px;
-  font-size: 12px;
-  font-weight: 500;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  background: #282828;
-  /* default: background: #161320; */
-  transition: none;
+#mpd {
+    color: @text-secondary;
 }
 
-#workspaces button {
-  transition: none;
-  color: #fbf1c7;
-  /* default: color: #b5e8e0; */
-  background: transparent;
-  border-radius: 2px;
+#mpd.paused {
+    color: @accent-blue;
 }
 
-#workspaces button.active {
-  color: #fe8019;
+#mpd.stopped {
+    color: @accent-red;
 }
 
-#workspaces button:hover {
-  transition: none;
-  box-shadow: inherit;
-  text-shadow: inherit;
-  color: #d65d0e;
-  border-color: #d65d0e;
-  /* border-color: #e8a2af; */
-  /* color: #e8a2af; */
+#playerctl {
+    color: @accent-purple;
 }
 
-#network {
-  margin-top: 6px;
-  margin-left: 8px;
-  padding-left: 2px;
-  padding-right: 2px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 12px;
-  transition: none;
-  color: #161320;
-  background: #fb4934;
-  /*default: background: #bd93f9;*/
+#weather {
+    color: @accent-yellow;
 }
 
-#pulseaudio {
-  margin-top: 6px;
-  margin-left: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 12px;
-  transition: none;
-  color: #e6e6e6;
-  background: #2a3b4f;
+#cpu {
+    color: @accent-blue;
 }
 
-#battery {
-  margin-top: 6px;
-  margin-left: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 12px;
-  transition: none;
-  color: #161320;
-  background: #b5e8e0;
+#memory {
+    color: @accent-purple;
 }
 
-#battery.critical:not(.charging) {
-  background-color: #b5e8e0;
-  color: #161320;
-  animation-name: blink;
-  animation-duration: 1s;
-  animation-timing-function: linear;
-  animation-iteration-count: infinite;
-  animation-direction: alternate;
-}
-
-@keyframes blink {
-  to {
-    background-color: #bf616a;
-    color: #b5e8e0;
-  }
-}
-
-#backlight {
-  margin-top: 6px;
-  margin-left: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 12px;
-  transition: none;
-  color: #161320;
-  background: #f8bd96;
+#volume {
+    color: @text-primary;
 }
 
 #clock {
-  margin-top: 6px;
-  margin-left: 8px;
-  margin-right: 8px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 12px;
-  transition: none;
-  color: #FFFAFA;
-  background: #4E4E4E;
-  /*default: background: #abe9b3; */
+    color: @text-primary;
 }
 
-#custom-launcher {
-  font-size: 24px;
-  margin-top: 6px;
-  margin-left: 12px;
-  margin-right: 6px;
-  padding-left: 14px;
-  padding-right: 24px;
-  border-radius: 10px;
-  transition: none;
-  color: #93E9BE;
-  /*default: color: #89dceb; */
-  background: #161320;
-}
-
-#custom-notification {
-  margin-top: 6px;
-  /* strange values normal is 8px 8px*/
-  /* margin-left: 0px; */ 
-  /* margin-right: 0px; */
-  padding-left: 6px;
-  padding-right: 6px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 15px;
-  transition: none;
-  color: #161320;
-  background: #b8bb26;
-  /*default: background: #bd93f9;*/
-}
-
-#custom-power {
-  margin-top: 6px;
-  margin-left: 8px;
-  margin-right: 1px;
-  padding-left: 6px;
-  padding-right: 10px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  font-size: 15px;
-  transition: none;
-  color: #161320;
-  background: #fb4934;
-  /*default: background: #bd93f9;*/
-}
-
-#tray {
-  margin-top: 6px;
-  margin-left: 8px;
-  margin-right: 0px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  background: #282828;
-  /* default: background: #161320; */
-  transition: none;
-}
-
-#bluetooth {
-  margin-top: 6px;
-  margin-left: 8px;
-  margin-bottom: 0px;
-  padding-left: 10px;
-  padding-right: 10px;
-  font-size: 12px;
-  border-radius: 10px;
-  transition: none;
-  color: #161320;
-  background: #fabd2f;
-  /*default: background: #bd93f9;*/
-}
-
-#taskbar {
-  margin-top: 6px;
-  margin-left: 0px;
-  margin-right: 8px;
-  margin-bottom: 0px;
-  border-radius: 10px;
-  background: #282828;
-  /* default: background: #161320; */
-  transition: none;
+#tray > .tray-item {
+    padding: 0 5px;
 }
