--- a/home/dotfiles/hypr/waybar/style.css
+++ b/home/dotfiles/hypr/waybar/style.css
@@ -4,7 +4,9 @@
     border: none;
     border-radius: 0px;
     font-family: JetBrainsMono Nerd Font, monospace;
-    font-size: 12px;
+    font-size: 11px;
+    font-weight: 500;
+    letter-spacing: 0px;
     min-height: 0;
 }
 
@@ -14,25 +16,33 @@ window#waybar {
     border-top: 2px solid @border;
 }
 
-#wlr-workspaces button {
-    padding: 0 6px;
-    margin: 2px;
+#hyprland-workspaces button {
+    padding: 0 4px;
+    margin: 1px;
     background-color: @bg-panel;
     border: 1px solid @border;
-    border-radius: 4px;
+    border-radius: 3px;
 }
 
 #wlr-workspaces button.focused {
     background-color: @accent-blue;
 }
 
-#window, #mpd, #playerctl, #weather, #cpu, #memory, #volume, #clock, #tray {
-    padding: 0 10px;
-    margin: 2px 4px;
+#window, 
+#mpd, 
+#mpris, 
+#custom-outtemperature, 
+#cpu, 
+#memory, 
+#volume, 
+#clock, 
+#tray {
+    padding: 0 6px;
+    margin: 1px 2px;
     background-color: @bg-panel;
     border: 1px solid @border;
-    border-radius: 4px;
-    box-shadow: 0 0 5px @shadow;
+    border-radius: 3px;
+    box-shadow: 0 0 2px @shadow;
 }
 
 #window {
@@ -51,11 +61,11 @@ window#waybar {
     color: @accent-red;
 }
 
-#playerctl {
+#mpris {
     color: @accent-purple;
 }
 
-#weather {
+#custom-outtemperature {
     color: @accent-yellow;
 }
 
@@ -67,7 +77,7 @@ window#waybar {
     color: @accent-purple;
 }
 
-#volume {
+#pulseaudio {
     color: @text-primary;
 }
 
@@ -76,5 +86,5 @@ window#waybar {
 }
 
 #tray > .tray-item {
-    padding: 0 5px;
+    padding: 0 4px;
 }
