--- a/home/dotfiles/hypr/waybar/style.css
+++ b/home/dotfiles/hypr/waybar/style.css
@@ -17,11 +17,11 @@ window#waybar {
 }
 
 #custom-power {
-    padding: 2px 10px;
+    padding: 2px 10px; /* Base padding */
     margin: 0 6px;
     background-color: @accent-power;
     color: @text-primary;
-    border: 1px solid @border;
+    border: 1px solid @border; /* Base border */
     box-shadow: 0 0 3px @shadow;
     transition: all 0.2s ease-in-out;
     min-width: 24px;
@@ -31,11 +31,11 @@ window#waybar {
 #custom-power:hover {
     background-color: @accent-power-light;
     box-shadow: 0 0 12px @accent-power-light;
-    padding-left: 2 0px;
-    padding-right: 2 0px; 
-    padding-top: 2px;
-    padding-bottom: 2px;
-    border-width: 2px;
+    padding-left: 20px; /* Corrected typo: removed space between 2 and 0px */
+    padding-right: 20px; /* Corrected typo: removed space between 2 and 0px */
+    padding-top: 1px; /* Adjust padding-top to compensate for increased border-top */
+    padding-bottom: 1px; /* Adjust padding-bottom to compensate for increased border-bottom */
+    border-width: 2px; /* Increased border-width */
 }
 
 #hyprland-workspaces button {
@@ -51,12 +51,12 @@ window#waybar {
     color: @text-primary;
 }
 
-#mpris, 
-#custom-outtemperature, 
-#cpu, 
-#memory, 
-#pulseaudio, 
-#clock, 
+#mpris,
+#custom-outtemperature,
+#cpu,
+#memory,
+#pulseaudio,
+#clock,
 #tray > .tray-item {
     padding: 0 6px;
     margin: 0px 3px;
